# StringLoopRefactor

./: FoundLoops.c  Makefile  diff.bc  extract-loops.py  grep.bc  m4.bc  make.bc  patch.bc  sed.bc  summarizeLoopInfo.sh  tar.bc  torture_test.bc  uploadLoopInfo.sh  wget.bc
FullExp/: Makefile
LoopFinder/: CMakeLists.txt
LoopFinder/LoopFind/: CMakeLists.txt  LoopFind.cpp  findLoops.sh
badLoops/: summarize.sh
badLoops/HasGoto/: git_pack-objects_1480.c  make_job_2615.c
badLoops/IOsideeffects/: git_combine-diff_1213.c  git_config_607.c  make_variable_1681.c
badLoops/NonPointerReturn/: bash_bashline_4200.c  bash_bind_1258.c  bash_bind_1329.c  bash_general_114.c  bash_general_834.c  (+69 more)
gadgets/: Makefile  optimize.py  printResult.sh  transform.py  visualize.py
gdLoops/: Makefile  bash_bashhist_607.c  bash_bind_1293.c  bash_bind_1351.c  bash_bind_1355.c  bash_bind_1358.c  bash_bind_1366.c  bash_expr_1240.c  bash_expr_1376.c  bash_expr_1417.c  bash_expr_410.c  bash_general_107.c  bash_general_825.c  bash_shell_1948.c  bash_sm_loop_242.c  compile.py  diffutils_basename-lgpl_36.c  diffutils_filenamecat-lgpl_40.c  diffutils_ifdef_316.c  diffutils_ifdef_318.c  diffutils_ifdef_321.c  gawk_command_1518.c  gawk_getopt_549.c  gawk_getopt_952.c  genResults.sh  git_abspath_40.c  git_abspath_43.c  git_archive-tar_193.c  git_commit_628.c  git_credential_365.c  git_dir_608.c  git_fetch_978.c  git_grep_1072.c  git_ident_224.c  git_ident_232.c  git_ident_310.c  git_log_726.c  git_merge_479.c  git_name-hash_60.c  git_path_1044.c  (+84 more)
iterativeDeepening/: Makefile  plotSynth.sh  runAll.sh
(+163 files in other folders)
